tests/paczka1/fuzzy1/68212706.err
Error in line 4: NXne3r6fYE S736 28,6
Error in line 6: NXne3r6fYE S399 81,2
Error in line 7: tom A730 1,2
Error in line 17: PNk S736 28,0
Error in line 14: NXne3r6fYE S736 192,6
Error in line 19: NXne3r6fYE A955 86,6
Error in line 18: PNk A730 77,7
Error in line 28: A730 A730 28,74
Error in line 38: tom S736 301,14
